# EchoBot

./: .gitignore  CMakeLists.txt  LICENSE  README.md
AorticAneurysmExam/: ApplicationGUI.cpp  ApplicationGUI.hpp  CMakeLists.txt  CameraInterface.cpp  CameraInterface.hpp  RobotInterface.h  UltrasoundInterface.cpp  UltrasoundInterface.hpp  main.cpp
AorticAneurysmExam/tracking/: robotTool.cpp  robotTool.h  robotTrackingSystemService.cpp  robotTrackingSystemService.h
AorticAneurysmExam/tracking/CADModel/: base.stl  ee.stl  link1.stl  link2.stl  link4.stl  link5.stl
AorticAneurysmExam/visualization/: CMakeLists.txt  robotVisualization.cpp  robotVisualization.h
AorticAneurysmExam/visualization/CADModels/: 5S-Probe.vtk  C5-2_60_Ultrasonix.vtk  base.vtk  endeffector.vtk  forearm.vtk  link1.vtk  shoulder.vtk  upperarm.vtk  wrist1.vtk  wrist2.vtk
AorticAneurysmExam/widgets/: CMakeLists.txt  robotManualMoveTab.cpp  robotManualMoveTab.h
applications/: CMakeLists.txt
applications/AorticAneurysmExam/: ApplicationGUI.cpp  ApplicationGUI.hpp  CMakeLists.txt  main.cpp
applications/ExampleApplication/: ApplicationGUI.cpp  ApplicationGUI.hpp  CMakeLists.txt  main.cpp
applications/RecordApplication/: CMakeLists.txt  RecordApplicationGUI.cpp  RecordApplicationGUI.hpp  main.cpp
applications/SkeletonApplication/: CMakeLists.txt  SkeletonGUI.cpp  SkeletonGUI.hpp  main.cpp
cmake/: ExternalCorah.cmake  ExternalFAST.cmake  ExternalFMT.cmake  ExternalQt5.cmake  ExternalRomocc.cmake  Externals.cmake  Macros.cmake  Requirements.cmake
cmake/Qt5Core/: Qt5CoreConfig.cmake
cmake/Qt5Gui/: Qt5GuiConfig.cmake
cmake/Qt5Network/: Qt5NetworkConfig.cmake
cmake/Qt5OpenGL/: Qt5OpenGLConfig.cmake
cmake/Qt5Widgets/: Qt5WidgetsConfig.cmake
source/EchoBot/: CMakeLists.txt
source/EchoBot/Core/: CMakeLists.txt  Config.cpp  Config.h  DataTypes.cpp  DataTypes.h  SmartPointers.h
source/EchoBot/Exporters/: CMakeLists.txt  PointCloudExporter.cpp  PointCloudExporter.h
source/EchoBot/Exporters/Tests/: PointCloudExporterTests.cpp
source/EchoBot/GUI/: CMakeLists.txt
source/EchoBot/GUI/Widgets/: CMakeLists.txt  CalibrationWidget.cpp  CalibrationWidget.h  ConnectionWidget.cpp  ConnectionWidget.h  RecordWidget.cpp  RecordWidget.h  RobotManualMoveTab.cpp  RobotManualMoveTab.h  RobotManualMoveWidget.cpp  RobotManualMoveWidget.h
source/EchoBot/Interfaces/: CMakeLists.txt  CameraInterface.cpp  CameraInterface.hpp  RobotInterface.cpp  RobotInterface.h  SensorInterface.h  UltrasoundInterface.cpp  UltrasoundInterface.hpp
source/EchoBot/Interfaces/Camera/: CMakeLists.txt  CameraDataProcessing.cpp  CameraDataProcessing.h  CameraInterface.cpp  CameraInterface.hpp
source/EchoBot/Interfaces/Robot/: CMakeLists.txt  RobotInterface.cpp  RobotInterface.h
source/EchoBot/Interfaces/Tests/: RobotInterfaceTests.cpp
source/EchoBot/Interfaces/Ultrasound/: CMakeLists.txt  UltrasoundImageProcessing.cpp  UltrasoundImageProcessing.h  UltrasoundInterface.cpp  UltrasoundInterface.hpp
source/EchoBot/Tests/: CMakeLists.txt  CatchMain.cpp  WorkflowTests.cpp
source/EchoBot/Utilities/: CMakeLists.txt  CalibrationTool.cpp  CalibrationTool.h  PointCloudUtilities.cpp  PointCloudUtilities.h  RecordTool.cpp  RecordTool.h  Utilities.cpp  Utilities.h
source/EchoBot/Utilities/Tests/: CalibrationToolTests.cpp
source/EchoBot/Visualization/: CMakeLists.txt  RobotVisualization.cpp  RobotVisualization.h  RobotVisualizationTests.cpp  VisualizationHelper.cpp  VisualizationHelper.h
source/EchoBot/Visualization/CADModels/: .gitignore  base.vtk  clarius_probe_with_holder_ur5.vtk  forearm.vtk  shoulder.vtk  wrist1.vtk  wrist2.vtk  wrist3.vtk
source/EchoBot/Visualization/CADModels/ur5/: base.vtk  upperarm.vtk  wrist1.vtk  wrist3.vtk
